--- a/index.html
+++ b/index.html
@@ -17,82 +17,228 @@
     </script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <style>
+        /* Berkeley I School inspired typography and styling */
+        * {
+            box-sizing: border-box;
+        }
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            line-height: 1.6;
-            max-width: 1200px;
+            font-family: 'Georgia', 'Times New Roman', serif;
+            font-size: 16px;
+            line-height: 1.7;
+            color: #333;
+            max-width: 900px;
             margin: 0 auto;
-            padding: 20px;
-            background-color: #f5f5f5;
+            padding: 40px 20px;
+            background-color: #ffffff;
         }
         .notebook-content {
             background: white;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            padding: 0;
         }
+        /* Typography - Headings */
+        h1 {
+            font-family: 'Helvetica Neue', 'Arial', sans-serif;
+            font-weight: 700;
+            font-size: 2.5em;
+            line-height: 1.2;
+            margin: 0.67em 0;
+            color: #1a1a1a;
+            border-bottom: 3px solid #003262;
+            padding-bottom: 0.3em;
+        }
+        h2 {
+            font-family: 'Helvetica Neue', 'Arial', sans-serif;
+            font-weight: 600;
+            font-size: 2em;
+            line-height: 1.3;
+            margin: 1.5em 0 0.75em 0;
+            color: #003262;
+            padding-top: 0.5em;
+        }
+        h3 {
+            font-family: 'Helvetica Neue', 'Arial', sans-serif;
+            font-weight: 600;
+            font-size: 1.5em;
+            line-height: 1.4;
+            margin: 1.25em 0 0.5em 0;
+            color: #1a1a1a;
+        }
+        h4 {
+            font-family: 'Helvetica Neue', 'Arial', sans-serif;
+            font-weight: 600;
+            font-size: 1.25em;
+            line-height: 1.4;
+            margin: 1em 0 0.5em 0;
+            color: #1a1a1a;
+        }
+        h5 {
+            font-family: 'Helvetica Neue', 'Arial', sans-serif;
+            font-weight: 600;
+            font-size: 1.1em;
+            line-height: 1.4;
+            margin: 0.9em 0 0.4em 0;
+            color: #1a1a1a;
+        }
+        /* Body text */
+        p {
+            margin: 1em 0;
+            text-align: justify;
+            text-justify: inter-word;
+        }
+        /* Links */
+        a {
+            color: #003262;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+            color: #FDB515;
+        }
+        a.anchor-link {
+            color: #999;
+            font-size: 0.8em;
+            margin-left: 0.5em;
+        }
+        /* Lists */
+        ul, ol {
+            margin: 1em 0;
+            padding-left: 2em;
+        }
+        li {
+            margin: 0.5em 0;
+        }
+        /* Images */
         img {
             max-width: 100%;
             height: auto;
+            display: block;
+            margin: 1.5em auto;
         }
-        /* Responsive table styling similar to Berkeley I School */
+        /* Tables - Berkeley I School style */
         .table-wrapper {
             overflow-x: auto;
-            margin: 20px 0;
+            margin: 2em 0;
             -webkit-overflow-scrolling: touch;
+            border: 1px solid #e0e0e0;
+            border-radius: 4px;
         }
         table {
             width: 100%;
             border-collapse: collapse;
             border-spacing: 0;
-            font-size: 14px;
+            font-size: 15px;
             min-width: 800px;
+            background: white;
         }
         table thead {
-            background-color: #f8f9fa;
-            border-bottom: 2px solid #dee2e6;
+            background-color: #f5f5f5;
+            border-bottom: 2px solid #003262;
         }
         table th {
-            padding: 12px 10px;
+            padding: 14px 12px;
             text-align: left;
             font-weight: 600;
-            color: #212529;
+            font-family: 'Helvetica Neue', 'Arial', sans-serif;
+            color: #1a1a1a;
             white-space: nowrap;
-            border-right: 1px solid #dee2e6;
+            border-right: 1px solid #e0e0e0;
         }
         table th:last-child {
             border-right: none;
         }
         table tbody tr {
-            border-bottom: 1px solid #dee2e6;
+            border-bottom: 1px solid #e0e0e0;
         }
         table tbody tr:hover {
-            background-color: #f8f9fa;
+            background-color: #f9f9f9;
+        }
+        table tbody tr:nth-child(even) {
+            background-color: #fafafa;
+        }
+        table tbody tr:nth-child(even):hover {
+            background-color: #f5f5f5;
         }
         table td {
-            padding: 10px;
-            border-right: 1px solid #e9ecef;
+            padding: 12px;
+            border-right: 1px solid #f0f0f0;
             vertical-align: top;
         }
         table td:last-child {
             border-right: none;
         }
         table tbody tr:last-child {
-            border-bottom: 2px solid #dee2e6;
+            border-bottom: 2px solid #e0e0e0;
+        }
+        /* Code and pre blocks */
+        code, pre {
+            font-family: 'Courier New', 'Monaco', 'Consolas', monospace;
+            font-size: 0.9em;
+        }
+        pre {
+            background-color: #f5f5f5;
+            padding: 1em;
+            border-radius: 4px;
+            overflow-x: auto;
+            border-left: 4px solid #003262;
+        }
+        /* Blockquotes */
+        blockquote {
+            margin: 1.5em 0;
+            padding-left: 1.5em;
+            border-left: 4px solid #FDB515;
+            color: #666;
+            font-style: italic;
+        }
+        /* Horizontal rules */
+        hr {
+            border: none;
+            border-top: 2px solid #e0e0e0;
+            margin: 2em 0;
+        }
+        /* Strong and emphasis */
+        strong {
+            font-weight: 600;
+            color: #1a1a1a;
+        }
+        em {
+            font-style: italic;
         }
         /* Responsive adjustments */
         @media (max-width: 768px) {
+            body {
+                padding: 20px 15px;
+                font-size: 15px;
+            }
+            h1 {
+                font-size: 2em;
+            }
+            h2 {
+                font-size: 1.75em;
+            }
+            h3 {
+                font-size: 1.35em;
+            }
             .table-wrapper {
-                margin: 15px -15px;
+                margin: 1.5em -15px;
                 padding: 0 15px;
             }
             table {
-                font-size: 12px;
+                font-size: 13px;
             }
             table th,
             table td {
-                padding: 8px 6px;
+                padding: 10px 8px;
             }
+        }
+        /* Notebook cell styling */
+        .cell {
+            margin: 1.5em 0;
+        }
+        .text_cell_render {
+            font-family: 'Georgia', 'Times New Roman', serif;
+        }
+        .inner_cell {
+            padding: 0.5em 0;
         }
         /* MathJax LaTeX formula styling */
         .MathJax {
@@ -104,10 +250,6 @@
             overflow-x: auto;
             overflow-y: hidden;
         }
-        /* Ensure proper spacing around paragraphs containing math */
-        p {
-            margin: 1em 0;
-        }
         /* Center display math formulas */
         .MathJax_Display,
         mjx-container[jax="CHTML"][display="true"] {
@@ -115,6 +257,28 @@
             text-align: center;
             margin: 1.5em auto;
             max-width: 100%;
+        }
+        /* Output wrapper styling */
+        .output_wrapper {
+            margin: 1.5em 0;
+        }
+        .output_png {
+            text-align: center;
+        }
+        /* Code cell styling */
+        .code_cell {
+            margin: 1em 0;
+        }
+        .input_prompt {
+            display: none;
+        }
+        /* Additional Berkeley I School inspired elements */
+        .border-box-sizing {
+            box-sizing: border-box;
+        }
+        /* Section spacing */
+        .cell.border-box-sizing.text_cell.rendered {
+            margin-bottom: 2em;
         }
     </style>
 </head>
