--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             background: white;
             padding: 0;
         }
-        /* Typography - Headings */
+        /* Typography - Headings (Berkeley I School style) */
         h1 {
             font-family: 'Helvetica Neue', 'Arial', sans-serif;
             font-weight: 700;
@@ -43,7 +43,7 @@
             line-height: 1.2;
             margin: 0.67em 0;
             color: #1a1a1a;
-            border-bottom: 3px solid #003262;
+            border-bottom: 3px solid #2c5282;
             padding-bottom: 0.3em;
         }
         h2 {
@@ -52,7 +52,7 @@
             font-size: 2em;
             line-height: 1.3;
             margin: 1.5em 0 0.75em 0;
-            color: #003262;
+            color: #2c5282;
             padding-top: 0.5em;
         }
         h3 {
@@ -61,7 +61,7 @@
             font-size: 1.5em;
             line-height: 1.4;
             margin: 1.25em 0 0.5em 0;
-            color: #1a1a1a;
+            color: #2c5282;
         }
         h4 {
             font-family: 'Helvetica Neue', 'Arial', sans-serif;
@@ -69,7 +69,7 @@
             font-size: 1.25em;
             line-height: 1.4;
             margin: 1em 0 0.5em 0;
-            color: #1a1a1a;
+            color: #2c5282;
         }
         h5 {
             font-family: 'Helvetica Neue', 'Arial', sans-serif;
@@ -77,7 +77,7 @@
             font-size: 1.1em;
             line-height: 1.4;
             margin: 0.9em 0 0.4em 0;
-            color: #1a1a1a;
+            color: #2c5282;
         }
         /* Body text */
         p {
