--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         }
         /* Typography - Headings (Berkeley I School style) */
         h1 {
-            font-family: 'Helvetica Neue', 'Arial', sans-serif;
+            font-family: "Libre Baskerville", Georgia, serif;
             font-weight: 700;
             font-size: 2.5em;
             line-height: 1.2;
@@ -47,7 +47,7 @@
             padding-bottom: 0.3em;
         }
         h2 {
-            font-family: 'Helvetica Neue', 'Arial', sans-serif;
+            font-family: "Libre Baskerville", Georgia, serif;
             font-weight: 600;
             font-size: 2em;
             line-height: 1.3;
@@ -56,7 +56,7 @@
             padding-top: 0.5em;
         }
         h3 {
-            font-family: 'Helvetica Neue', 'Arial', sans-serif;
+            font-family: "Libre Baskerville", Georgia, serif;
             font-weight: 600;
             font-size: 1.5em;
             line-height: 1.4;
