--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
             line-height: 1.7;
             color: #333;
             max-width: 900px;
-            margin: 0 auto;
-            padding: 40px 20px;
+            margin: 0;
+            padding: 0;
             background-color: #ffffff;
+            color:#333;
         }
         .notebook-content {
             background: white;
@@ -280,33 +281,202 @@
         .cell.border-box-sizing.text_cell.rendered {
             margin-bottom: 2em;
         }
+    /* =========================
+   two-column layout styles
+   ========================= */
+
+:root{
+  --navy:#0b2a6f;
+  --gold:#FDB515;
+  --text:#1b1b1b;
+  --muted:#444;
+}
+
+/* Remove notebook width constraint */
+body{
+  max-width:none !important;
+  margin:0 !important;
+  padding:0 !important;
+}
+
+/* Two-column page layout */
+.page{
+  max-width:1200px;
+  margin:0 auto;
+  padding:48px 40px;
+  display:flex;
+  gap:56px;
+  align-items:flex-start;
+}
+
+/* Sidebar */
+.sidebar{
+  width:220px;
+  flex:0 0 220px;
+  font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+}
+
+.sidebar-title{
+  font-weight:700;
+  font-size:16px;
+  color:var(--muted);
+  line-height:1.3;
+  margin-bottom:24px;
+}
+
+.sidebar-heading{
+  font-weight:800;
+  margin:16px 0 10px;
+  color:#000;
+}
+
+.sidebar-list{
+  list-style:none;
+  padding:0;
+  margin:0;
+}
+
+.sidebar-list li{
+  margin:10px 0;
+  color:var(--navy);
+}
+
+/* Main content */
+.content{
+  flex:1;
+  min-width:0;
+}
+
+/* Typography fixes */
+h1{
+  color:var(--navy);
+  border:none !important;
+  padding-bottom:0 !important;
+  margin:0 0 12px 0;
+  font-size:44px;
+  line-height:1.1;
+}
+
+h2{
+  color:var(--navy);
+  font-size:28px;
+  padding-top:0;
+}
+
+p{
+  font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+  text-align:left;
+  max-width:760px;
+}
+
+/* Gold divider */
+.rule{
+  height:2px;
+  background:var(--gold);
+  width:100%;
+  margin:14px 0 28px;
+}
+
+/* Hide notebook anchor symbols */
+a.anchor-link{
+  display:none;
+}
+
+/* Prevent notebook wrapper from re-centering */
+.notebook-content{
+  max-width:none;
+  margin:0;
+  padding:0;
+}
+h1{
+  margin-bottom: 8px;
+}
+
+.rule{
+  margin: 10px 0 18px;
+}
+/* =========================
+   White-space compression
+   ========================= */
+
+/* Reduce big gaps between notebook "cells" */
+.cell{
+  margin: 0.6em 0 !important;
+}
+
+.cell.border-box-sizing.text_cell.rendered{
+  margin-bottom: 0.6em !important;
+}
+
+.inner_cell{
+  padding: 0 !important;
+}
+
+/* Reduce paragraph spacing */
+p{
+  margin: 0.6em 0 !important;
+}
+
+/* Reduce heading spacing a bit */
+h2{
+  margin: 1.1em 0 0.4em 0 !important;
+}
+
+h3{
+  margin: 0.8em 0 0.3em 0 !important;
+}
+
+h4, h5{
+  margin: 0.6em 0 0.25em 0 !important;
+}
+
+/* Tighten tables/figures */
+table, img{
+  margin: 0.8em 0 !important;
+}
+    
     </style>
 </head>
 <body>
-    <div class="notebook-content">
+  <div class="page">
+    <aside class="sidebar">
+      <div class="sidebar-title">
+        MIDS Capstone Project<br>
+        Fall 2024
+      </div>
+
+      <div class="sidebar-section">
+        <div class="sidebar-heading">Team Members</div>
+        <ul class="sidebar-list">
+          <li>Anabel Basualdo</li>
+          <li>Carlos Schrupp</li>
+          <li>Arun Agarwal</li>
+          <li>Shikha Sharma</li>
+          <li>Nicole Zhang</li>
+        </ul>
+      </div>
+    </aside>
+
+    <main class="content">
+      <div class="notebook-content">
+
 <div class="cell border-box-sizing text_cell rendered">
  <div class="prompt input_prompt">
  </div>
  <div class="inner_cell">
   <div class="text_cell_render border-box-sizing rendered_html">
    <h1 id="Flight-Sentry">
-    Flight Sentry
-    <a class="anchor-link" href="#Flight-Sentry">
-     ¶
-    </a>
-   </h1>
-   <h2 id="Predicting-Flight-Departure-Delays:-A-Time-Series-Classification-Approach">
-    Predicting Flight Departure Delays: A Time-Series Classification Approach
-    <a class="anchor-link" href="#Predicting-Flight-Departure-Delays:-A-Time-Series-Classification-Approach">
-     ¶
-    </a>
-   </h2>
-   <h4 id="FP-Phase-3-EDA,-baseline-pipeline,-Scalability,-Efficiency,-Distributed/parallel-Training,-and-Scoring-Pipeline">
-    FP Phase 3 EDA, baseline pipeline, Scalability, Efficiency, Distributed/parallel Training, and Scoring Pipeline
-    <a class="anchor-link" href="#FP-Phase-3-EDA,-baseline-pipeline,-Scalability,-Efficiency,-Distributed/parallel-Training,-and-Scoring-Pipeline">
-     ¶
-    </a>
-   </h4>
+  Flight Sentry
+  <a class="anchor-link" href="#Flight-Sentry">¶</a>
+</h1>
+
+<div class="rule"></div>
+
+<h2 id="Predicting-Flight-Departure-Delays">
+  Predicting Flight Departure Delays: A Time-Series Classification Approach
+  <a class="anchor-link" href="#Predicting-Flight-Departure-Delays">¶</a>
+</h2>
+
   </div>
  </div>
 </div>
@@ -316,7 +486,7 @@
  <div class="inner_cell">
   <div class="text_cell_render border-box-sizing rendered_html">
    <h2 id="1.-Team-4-4-Introduction">
-    1. Team 4-4 Introduction
+    1. Introduction
     <a class="anchor-link" href="#1.-Team-4-4-Introduction">
      ¶
     </a>
@@ -22057,5 +22227,9 @@ At each major stage we
         }
       });
     </script>
+      </div>
+    </main>
+  </div>
 </body>
 </html>
+
