Fix notebook layout

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ table, img{
   <div class="page">
     <aside class="sidebar">
       <div class="sidebar-title">
-        MIDS Capstone Project<br>
+        MIDS Project<br>
         Fall 2025
       </div>
 
